added support for error_response url params and the overriding configuration to make all 4xx and 5xx to be force to a special status set in config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.properties.hibernate.search.mapping.configurer=com.example.demo.Progr
 
 spring.jpa.properties.hibernate.entity_dirtiness_strategy=gsrs.GsrsEntityDirtinessStrategy
 spring.jackson.serialization.fail-on-empty-beans=false
+#this allows GSRS Api routes to add a ?error_response=500 on the url to change the error code from 404 to 500
+gsrs.api.errorCodeParameter=error_response
+#uncommenting this will force all errors to have the given status code (unless also using an error_response
+#gsrs.api.forceErrorCodeValue=500
