added cv loader on start up

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jackson.serialization.fail-on-empty-beans=false
 gsrs.api.errorCodeParameter=error_response
 #uncommenting this will force all errors to have the given status code (unless also using an error_response
 #gsrs.api.forceErrorCodeValue=500
+
+gsrs.cv.jsonFile=/cv.json
