--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ gsrs.api.errorCodeParameter=error_response
 #gsrs.api.forceErrorCodeValue=500
 
 gsrs.cv.jsonFile=/cv.json
+
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
