moved over Play version Lucene 4 classes it compiles but not all wired up correctly yet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,13 @@ gsrs.cv.jsonFile=/cv.json
 
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
+
+ix.textindex.enabled=true
+ix.fetchWorkerCount=4
+
+ix.api.registeredfunctions[0]=ix.core.util.pojopointer.extensions.StringLengthRegisteredFunction
+#ix.api.registeredfunctions[1]=ix.core.util.pojopointer.extensions.InChIRegisteredFunction
+#ix.api.registeredfunctions[2]=ix.core.util.pojopointer.extensions.InChIFullRegisteredFunction
+ix.api.registeredfunctions[1]=ix.core.util.pojopointer.extensions.StringSplitRegisteredFunction
+ix.api.registeredfunctions[2]=ix.core.util.pojopointer.extensions.SelectRegisteredFunction
+ix.api.registeredfunctions[3]=ix.core.util.pojopointer.extensions.StringJoinRegisteredFunction
