--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <lucene.version>4.10.0</lucene.version>
     </properties>
 
     <dependencies>
@@ -44,15 +45,63 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.hibernate.search</groupId>-->
+<!--            <artifactId>hibernate-search-mapper-orm</artifactId>-->
+<!--            <version>6.0.0.Beta11</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.hibernate.search</groupId>-->
+<!--            <artifactId>hibernate-search-backend-lucene</artifactId>-->
+<!--            <version>6.0.0.Beta10</version>-->
+<!--        </dependency>-->
+
+<!--        ,"org.apache.lucene" % "lucene-core" % "4.10.0"-->
+<!--        ,"org.apache.lucene" % "lucene-analyzers-common" % "4.10.0"-->
+<!--        ,"org.apache.lucene" % "lucene-misc" % "4.10.0"-->
+<!--        ,"org.apache.lucene" % "lucene-highlighter" % "4.10.0"-->
+<!--        ,"org.apache.lucene" % "lucene-suggest" % "4.10.0"-->
+<!--        ,"org.apache.lucene" % "lucene-facet" % "4.10.0"-->
+<!--        ,"org.apache.lucene" % "lucene-queryparser" % "4.10.0"-->
         <dependency>
-            <groupId>org.hibernate.search</groupId>
-            <artifactId>hibernate-search-mapper-orm</artifactId>
-            <version>6.0.0.Beta11</version>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>${lucene.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate.search</groupId>
-            <artifactId>hibernate-search-backend-lucene</artifactId>
-            <version>6.0.0.Beta10</version>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-analyzers-common</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-misc</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-highlighter</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-suggest</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-facet</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queryparser</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.11</artifactId>
+            <version>2.5.32</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
