first partial working version of legacy text indexer search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ gsrs.cv.jsonFile=/cv.json
 
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
-
+ix.home=ginas.ix
 ix.textindex.enabled=true
 ix.fetchWorkerCount=4
 
