added validator code but no validator implementations yet

--- a/src/main/resources/gsrs-core.conf
+++ b/src/main/resources/gsrs-core.conf
@@ -48,3 +48,10 @@ ix.api.registeredfunctions=[
                 "class":"ix.core.util.pojopointer.extensions.StringJoinRegisteredFunction"
         }
 ]
+
+ix.json.typeIdResolvers = [ "ix"]
+gsrs.example = "testing"
+
+gsrs.validators {
+    "foo" : []
+}
