--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,1 +1,8 @@
 include "gsrs-core.conf"
+
+gsrs.validators.vocabularies = [
+    {
+        "validatorClass" = "gsrs.vocab.DuplicateDomainValidator",
+         "newObjClass" = "ix.ginas.models.v1.ControlledVocabulary",
+    }
+]
