--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <properties>
         <java.version>1.8</java.version>
         <lucene.version>4.10.0</lucene.version>
-        <gsrs.version>0.0.13-SNAPSHOT</gsrs.version>
+        <gsrs.version>0.0.14-SNAPSHOT</gsrs.version>
     </properties>
 
     <dependencies>
@@ -43,6 +43,12 @@
             <groupId>gov.nih.ncats</groupId>
             <artifactId>gsrs-core-entities</artifactId>
             <version>${gsrs.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>gov.nih.ncats</groupId>
+            <artifactId>gsrs-spring-starter-tests</artifactId>
+            <version>${gsrs.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
