working version with authentication of legacy header

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,3 +6,6 @@ gsrs.validators.vocabularies = [
          "newObjClass" = "ix.ginas.models.v1.ControlledVocabulary",
     }
 ]
+
+
+logging.level.org.springframework.web=DEBUG
