updated to latest starter

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,6 +6,10 @@ gsrs.validators.vocabularies = [
          "newObjClass" = "ix.ginas.models.v1.ControlledVocabulary",
     }
 ]
-
+spring.application.name=vocabularies
 
 logging.level.org.springframework.web=DEBUG
+
+server.servlet-path=/loop-service
+
+server.use-forward-headers=true
