--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>2.3.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>demo</artifactId>
-    <version>0.4.0-SNAPSHOT</version>
-    <name>lucene-spring-demo</name>
-    <description>Demo project for Spring Boot with lucene</description>
+    <groupId>gov.nih.ncats</groupId>
+    <artifactId>gsrs-module-cv</artifactId>
+    <version>0.6.2-SNAPSHOT</version>
+    <name>gsrs-module-cv</name>
+    <description>GSRS Spring Controlled Vocabulary module</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -20,6 +20,60 @@
         <lucene.version>4.10.0</lucene.version>
         <gsrs.version>0.6.2-SNAPSHOT</gsrs.version>
     </properties>
+    <licenses>
+        <license>
+            <name>Apache-2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+
+        <developer>
+            <id>peryeata</id>
+            <name>Tyler Peryea</name>
+            <email>tyler.peryea@fda.hhs.gov</email>
+            <roles>
+                <role>developer</role>
+            </roles>
+            <timezone>America/New_York</timezone>
+        </developer>
+        <developer>
+            <id>katzelda</id>
+            <name>Daniel Katzel</name>
+            <email>daniel.katzel@nih.gov</email>
+            <roles>
+                <role>architect</role>
+                <role>developer</role>
+            </roles>
+            <timezone>America/New_York</timezone>
+        </developer>
+    </developers>
+
+    <repositories>
+        <repository>
+            <id>oss.sonatype.org-snapshot</id>
+            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
     <dependencies>
         <dependency>
